# training-gym

./: .gitignore  .pre-commit-config.yaml  000_rl_basics.ipynb  AGENTS.md  README.md  TODO.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs.yml  format.yml  test.yml
dashboards/: README.md  app.py
dashboards/frontend/: index.html  package-lock.json  package.json  vite.config.js
docs/: docs_app.py  generate_mkdocs_pages.py  mkdocs.yml  tutorial-validation-ms_swift_custom_hf.json  tutorial-validation-ms_swift_custom_hf.md  tutorial-validation-preflight.json  tutorial-validation-preflight.md  tutorial-validation-quickstart.json  tutorial-validation-quickstart.md  tutorial-validation-report.json  tutorial-validation-report.md
docs-next/: README.md  astro.config.mjs  docs_next_app.py  modal-reference-theme.mjs  package-lock.json  package.json  rehype-table-wrapper.mjs
docs-next/scripts/: patch-starlight-head-schema.mjs
docs/pages/: support.md
examples/: modal_app_builder.py  qwen3_30b_validation.py
modal_training_gym/: __init__.py  _dashboard.py  cli.py  model.py  server.py  setup.py  train.py
modal_training_gym/common/: __init__.py  checkpoint.py  client.py  cost.py  dataset.py  deploy.py  deployment.py  eval.py  framework.py  haiku_reward.py  harbor.py  llm_judge.py  modal_urls.py  ray_cluster.py  run.py  serve_sglang.py  serve_vllm.py  train.py  train_result.py  wandb.py
modal_training_gym/deploy_recipes/: __init__.py  base.py
modal_training_gym/frameworks/: base.py
modal_training_gym/tools/: convert_kimi_int4_to_bf16.py
modal_training_gym/train_recipes/: base.py
scripts/: api_reference_manifest.py  backfill_app_ids.py  backfill_dashboard_summaries.py  backfill_runs.py  generate_all.py  generate_api_reference.py  generate_docs_pages.py  generate_tutorial_pages.py  test_hf_cache_volume_safety.py  validate_tutorials.py
skills/: agent-example-validation.md  agent-modal-training.md  agent-training-gym-overview.md
tests/: test_harbor_smoke.py  test_hf_secrets.py  test_model_configuration.py  test_ms_swift_config.py  test_train_result.py
tutorials/: README.md  generate_tutorial.py
(+359 files in other folders)
