[project]
name = "modal-training-gym"
version = "0.1.0"
description = "Reusable building blocks for Modal multi-node training examples"
requires-python = ">=3.12"
dependencies = [
    "modal",
    "cloudpickle",
    "datasets",
    "msgspec",
    "openai",
    "pydantic",
    "fastapi"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modal_training_gym"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
docs = [
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-material>=9.7.6",
    "properdocs>=1.6.7",
    "pymdown-extensions>=10.21.2",
]

[tool.ruff]
extend-exclude = ["tutorials/**"]
